<resources>
    <string name="app_name">MAD Project</string>
    <string name="title_activity_addbill_reminder">AddbillReminder</string>
    <string name="title_activity_viewbill_reminder">ViewbillReminder</string>
    <string name="title_activity_updatewbill_reminder">UpdatebillReminder</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtTitle1">Income</string>
    <string name="edtDate">Date</string>
    <string name="edtAmount">Amount</string>
    <string name="edtCategory">Category</string>
    <string name="edtDescription">Description</string>
    <string name="btnSave">Save</string>
    <string name="btnEdit" />
    <string name="btnDelete">Delete</string>
    <string name="bttnEdit">Edit</string>
    <string name="txtMonth">January</string>
    <string name="txtTopic">Overall Income</string>
    <string name="txt_OI_Amount">Rs.100000</string>
    <string name="txtIncome1">Salary</string>
    <string name="IncomeAmmo1">Rs.50000</string>
    <string name="txtIncome2">Wages</string>
    <string name="IncomeAmmo2">Rs.5000</string>
    <string name="txtIncome3">Interest</string>
    <string name="IncomeAmmo3">Rs.25000</string>
    <string name="txtIncome4">Gifts</string>
    <string name="Income4">Rs.5000</string>
    <string name="txtIncome5">Investments</string>
    <string name="IncomeAmmo5">Rs.15000</string>
    <string name="txtPayment">Payment Card Details</string>
    <string name="edtNumber">Card Number</string>
    <string name="txtED">Expire Date</string>
    <string name="txtCode">CVC Code</string>
    <string name="txtCType">Card Type</string>
    <string name="add_new_item">Add new item</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_category">Enter Category</string>
    <string name="enter_ammount">Enter Amount</string>
    <string name="dd_mm_yyyy">Enter Date</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="loading">Loading...</string>
    <string name="add">Add</string>
    <string name="test">Test</string>
</resources>