<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IncomesCreate">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cut_card_background"
        app:cardCornerRadius="30dp">

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="301dp"
            android:background="@drawable/cut_card_background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="372dp"
                android:layout_height="70dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="36dp"
                android:layout_marginRight="16dp"
                android:text="@string/txtTitle1"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="34sp" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="530dp"

            android:layout_marginLeft="16dp"
            android:layout_marginTop="-200dp"
            android:layout_marginRight="16dp"
            android:elevation="20dp"
            app:cardCornerRadius="30dp">

            <LinearLayout
                android:layout_width="378dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/salary"
                    android:id="@+id/uploadImage"
                    android:scaleType="fitCenter"/>


                <EditText
                    android:id="@+id/edDate"
                    android:inputType="date"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/tx_border"
                    android:gravity="start|center_vertical"
                    android:hint="@string/dd_mm_yyyy"
                    android:padding="16dp" />

                <EditText
                    android:id="@+id/edtAmount"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/tx_border"
                    android:gravity="start|center_vertical"
                    android:hint="@string/enter_amount"
                    android:padding="16dp" />

                <EditText
                    android:id="@+id/edtCategory"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/tx_border"
                    android:gravity="start|center_vertical"
                    android:hint="@string/enter_category"
                    android:padding="16dp" />

                <EditText
                    android:id="@+id/edtDescription"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/tx_border"
                    android:gravity="start|center_vertical"
                    android:hint="@string/enter_description"
                    android:padding="16dp" />


                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="31dp"
                    android:layout_marginRight="100dp"
                    android:backgroundTint="#2348FF"
                    android:text="@string/btnSave"
                    android:textSize="18sp"
                    app:cornerRadius="16dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</RelativeLayout>